--- a/simple-web-app/simple-web-app-deployment.yml
+++ b/simple-web-app/simple-web-app-deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: simple-web-app
-          image: waytodanny/simple-web-app:v0.0.1
+          image: waytodanny/simple-web-app:0.0.2
           ports:
             - containerPort: 8080
 ---
